[project]
name = "space-invaders-pygame"
version = "0.1.0"
description = ""
authors = [
    {name = "KarAlex360",email = "karsanov360@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pylint (>=3.3.3,<4.0.0)",
    "black (>=24.10.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
